force-app/main/default/objects/FEC_Log__c/FEC_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to log all code exceptions.</description>
    <label>Apex Code Log</label>
    <nameField>
        <label>FEC Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>