force-app/main/default/objects/FEC_Log__c/fields/FEC_Author__c.field-meta.xml
<CustomField>
    <fullName>FEC_Author__c</fullName>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>