force-app/main/default/objects/FEC_Log__c/fields/FEC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>