force-app/main/default/objects/FEC_Log__c/fields/FEC_Function_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Function_Name__c</fullName>
    <description>ApexClass.FunctionName</description>
    <label>Function Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>