force-app/main/default/objects/FEC_Log__c/fields/FEC_Stack_Trace_String__c.field-meta.xml
<CustomField>
    <fullName>FEC_Stack_Trace_String__c</fullName>
    <label>Stack Trace String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>